<?xml version="1.0" encoding="utf-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>org.seaborne</groupId>
  <artifactId>jena-workspace</artifactId>
  <packaging>jar</packaging>
  <version>0.0.0-SNAPSHOT</version>

  <description>AFS workspace</description>

  <properties>
    <ver.jena>4.4.0-SNAPSHOT</ver.jena>
    <ver.fuseki>${ver.jena}</ver.fuseki>

    <ver.slf4j>1.7.32</ver.slf4j>
    <ver.log4j2>2.16.0</ver.log4j2>

  </properties>

  <dependencies>

    <dependency>
      <groupId>org.seaborne</groupId>
      <artifactId>iri4ld</artifactId>
      <version>0.0.0-SNAPSHOT</version>
    </dependency>

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>apache-jena-libs</artifactId>
      <version>${ver.jena}</version>
      <type>pom</type>
    </dependency> 

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-base</artifactId>
      <version>${ver.jena}</version>
      <classifier>tests</classifier>
    </dependency>

    <!-- Titanium -->
    <dependency>
      <!-- Apache License -->
      <groupId>com.apicatalog</groupId>
      <artifactId>titanium-json-ld</artifactId>
        <version>1.1.0</version>
    </dependency>
    
    <!-- Eclipse Public License 2.0 -->
    <dependency>
      <groupId>org.glassfish</groupId>
      <artifactId>jakarta.json</artifactId>
      <version>2.0.1</version>
    </dependency>
    <!-- Optional - use if another JSON Processing implementation is used -->
    <dependency>
      <groupId>jakarta.json</groupId>
      <artifactId>jakarta.json-api</artifactId>
      <version>2.0.1</version>
    </dependency>

    <!--
    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-querybuilder</artifactId>
      <version>${ver.jena}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-querybuilder</artifactId>
      <version>${ver.jena}</version>
      <classifier>sources</classifier> 
    </dependency>
    -->

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-core</artifactId>
      <version>${ver.jena}</version>
      <classifier>tests</classifier> 
      <scope>compile</scope>
    </dependency>

    <!--
    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-sdb</artifactId>
      <version>${ver.jena}</version>
    </dependency>
    -->

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-arq</artifactId>
      <version>${ver.jena}</version>
      <classifier>tests</classifier> 
    </dependency>

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-tdb</artifactId>
      <version>${ver.jena}</version>
      <classifier>tests</classifier> 
    </dependency>

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-cmds</artifactId>
      <version>${ver.jena}</version> 
      <!-- JUL
      <exclusions>
        <exclusion>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-jdk14</artifactId>
        </exclusion>
      </exclusions>
      -->
    </dependency>

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-cmds</artifactId>
      <version>${ver.jena}</version> 
      <scope>runtime</scope>
      <classifier>tests</classifier> 
    </dependency>

    <!--
    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-permissions</artifactId>
      <version>${ver.jena}</version> 
    </dependency>
    -->

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-text</artifactId>
      <version>${ver.jena}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-fuseki-webapp</artifactId>
      <version>${ver.fuseki}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-fuseki-main</artifactId>
      <version>${ver.fuseki}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.jena</groupId>
      <artifactId>jena-fuseki-main</artifactId>
      <version>${ver.fuseki}</version>
      <classifier>tests</classifier>
    </dependency>  

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.2</version>
    </dependency>
    
    <!-- Require a logging implementation -->
    
    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jul-to-slf4j</artifactId>
       <version>${ver.slf4j}</version>
    </dependency>

    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
      <version>${ver.log4j2}</version>
    </dependency>
    
    <!-- JUL
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-jdk14</artifactId>
      <version>1.7.21</version>
    </dependency>
    -->

  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
	      <version>3.8.1</version>
        <configuration>
          <release>16</release>
        </configuration>
<!--
          <encoding>UTF-8</encoding>
          <debug>true</debug>
          <debuglevel>source,lines,vars</debuglevel>
          <optimize>true</optimize>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
-->
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
	      <version>3.2.0</version>
        <configuration>
          <encoding>UTF-8</encoding>
        </configuration>
      </plugin>
      
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-dependency-plugin</artifactId>
        <configuration>
          <overWriteReleases>false</overWriteReleases>
          <overWriteIfNewer>true</overWriteIfNewer>
        </configuration>
      </plugin>

    </plugins>

  </build>

</project>
